Dark mode, layout fixes

--- a/src/components/CurrentWeatherInfoTile/CurrentWeatherInfoTile.scss
+++ b/src/components/CurrentWeatherInfoTile/CurrentWeatherInfoTile.scss
@@ -9,6 +9,7 @@
 
   .weather-symbol {
     font-size: 128px;
+    line-height: 1;
   }
 
   .temperature {
