--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,5 @@
 .Header {
-  .mainIcon {
+  .main-icon {
     margin-right: 15px;
   }
 }
